<resources>
    <string name="app_name">Eurisko App</string>
    <string name="email_ET">Enter Email</string>
    <string name="password_ET">Enter Password</string>
    <string name="password_verification_ET">Verify Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="login_btn">Log In</string>
    <string name="firstname_ET">Enter First Name</string>
    <string name="lastname_ET">Enter Last Name</string>
    <string name="log_out">Log Out</string>



</resources>